--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Hello World!</title>
   <\head>
   <body>
-    <p>Hellow World!<\p>
+    <div>
+    <h1>Hello World!<\h1>
+    <h2>Level 2 Heading<\h2>
   <\body>
 <\html>
      
