--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
     <title>Hello World!</title>
-  <\head>
+  </head>
   <body>
     <div>
-    <h1>Hello World!<\h1>
-    <h2>Level 2 Heading<\h2>
-  <\body>
-<\html>
+    <h1>Hello World!</h1>
+    <h2>Level 2 Heading</h2>
+    <p>Paragraph with a <span class="blue">blue span</span>in it</p>
+  </body>
+</html>
      
