--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <html>
   <head>
     <title>Hello World!</title>
+    <style>
+      .blue { color:blue; }
+      .red { color:red; }
+    </style>
   </head>
   <body>
     <div>
     <h1>Hello World!</h1>
     <h2>Level 2 Heading</h2>
     <p>Paragraph with a <span class="blue">blue span</span>in it</p>
+    <p>Paragraph with a <span class="red">red span</span>in it</p>
   </body>
 </html>
      
